# fly-fastapi-example

./: Dockerfile  bl2.conf  fly.toml  pyproject.toml  run.sh
fly_fastapi_example/: main.py
