[tool.poetry]
name = "fly-fastapi-example"
version = "0.1.0"
description = ""
authors = ["Brian Li <brian@brianli.com>"]
readme = "README.md"
packages = [{include = "fly_fastapi_example"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
fastapi = "^0.101.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
